--- a/index.html
+++ b/index.html
@@ -22,20 +22,34 @@
         <button class="button primary-button square-button" id="zoom-out">
           <img src="./src/assets/ic-zoom-out.svg" alt="rotate right" />
         </button>
-        <label for="color-select">
-          Select Pen Color
-          <input
-            value="#ff0000"
-            type="color"
-            name="color-select"
-            id="color-select"
-          />
-        </label>
       </span>
 
       <button class="button primary-button" id="download">
         <img src="./src/assets/ic-download.svg" alt="rotate right" />
       </button>
+    </div>
+    <div id="secondary-actions">
+      <label for="color-select">
+        <span class="label-text">Select Pen Color</span>
+        <input
+          value="#ff0000"
+          type="color"
+          name="color-select"
+          id="color-select"
+        />
+      </label>
+
+      <label for="color-select">
+        <span class="label-text">Select Brush Size</span>
+        <input
+          type="range"
+          min="10"
+          max="100"
+          value="10"
+          step="10"
+          id="brush-select"
+        />
+      </label>
     </div>
     <canvas id="paint" height="600" width="600"></canvas>
     <label for="image-upload" class="button primary-button upload-button">
